--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.example.smarttravel_e",
+    "bundleName": "com.youshan.domaingo",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
