--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -23,28 +23,49 @@
     "requestPermissions": [
       {
         "name": "ohos.permission.APPROXIMATELY_LOCATION",
-        "reason": "$string:location_reason", // 需要在 string.json 中定义原因，或直接写字符串
-        "usedScene": { "abilities": ["EntryAbility"], "when": "inuse" }
+        "reason": "$string:location_reason",
+        // 需要在 string.json 中定义原因，或直接写字符串
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "inuse"
+        }
       },
       {
         "name": "ohos.permission.LOCATION",
         "reason": "$string:location_reason",
-        "usedScene": { "abilities": ["EntryAbility"], "when": "inuse" }
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "inuse"
+        }
       },
       {
         "name": "ohos.permission.INTERNET"
       },
       {
         "name": "ohos.permission.READ_IMAGEVIDEO",
-        "reason": "$string:image_reason", // 需要在 string.json 中定义原因，或直接写字符串
-        "usedScene": { "abilities": ["EntryAbility"], "when": "inuse" }
+        "reason": "$string:image_reason",
+        // 需要在 string.json 中定义原因，或直接写字符串
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "inuse"
+        }
       },
-      { "name": "ohos.permission.GET_NETWORK_INFO" },
+      {
+        "name": "ohos.permission.GET_NETWORK_INFO"
+      },
       {
         "name": "ohos.permission.READ_CALENDAR",
         "reason": "$string:calendar_reason",
         "usedScene": {
-          "abilities": ["EntryAbility"],
+          "abilities": [
+            "EntryAbility"
+          ],
           "when": "inuse"
         }
       },
@@ -52,7 +73,9 @@
         "name": "ohos.permission.WRITE_CALENDAR",
         "reason": "$string:calendar_reason",
         "usedScene": {
-          "abilities": ["EntryAbility"],
+          "abilities": [
+            "EntryAbility"
+          ],
           "when": "inuse"
         }
       }
@@ -70,13 +93,16 @@
         "exported": true,
         "skills": [
           {
-            "entities": ["entity.system.home"],
-            "actions": ["ohos.want.action.home"]
+            "entities": [
+              "entity.system.home"
+            ],
+            "actions": [
+              "ohos.want.action.home"
+            ]
           }
         ]
       }
     ],
-
     "extensionAbilities": [
       {
         "name": "EntryBackupAbility",
@@ -87,6 +113,19 @@
           {
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
+          }
+        ]
+      },
+      {
+        "name": "EntryFormAbility",
+        "srcEntry": "./ets/entryformability/EntryFormAbility.ets",
+        "label": "$string:EntryFormAbility_label",
+        "description": "$string:EntryFormAbility_desc",
+        "type": "form",
+        "metadata": [
+          {
+            "name": "ohos.extension.form",
+            "resource": "$profile:form_config"
           }
         ]
       }
