--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -60,6 +60,17 @@
         "name": "ohos.permission.GET_NETWORK_INFO"
       },
       {
+        "name": "ohos.permission.WRITE_IMAGEVIDEO",
+        "reason": "$string:reason_gallery",
+        // 需要在 string.json 中定义原因，或直接写字符串
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when": "inuse"
+        }
+      },
+      {
         "name": "ohos.permission.READ_CALENDAR",
         "reason": "$string:calendar_reason",
         "usedScene": {
