--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -46,6 +46,9 @@
         "name": "ohos.permission.INTERNET"
       },
       {
+        "name": "ohos.permission.PUBLISH_AGENT_REMINDER"
+      },
+      {
         "name": "ohos.permission.READ_IMAGEVIDEO",
         "reason": "$string:image_reason",
         // 需要在 string.json 中定义原因，或直接写字符串
