10th update-UI redraw

--- a/entry/oh-package.json5
+++ b/entry/oh-package.json5
@@ -6,9 +6,6 @@
   "author": "",
   "license": "",
   "dependencies": {
-//    "@kit.MapKit": "latest",
-//    "@kit.BasicServicesKit": "latest",
-//    "@kit.ArkUI": "latest"
+    "@hw-agconnect/auth-ohos": "1.1.3"
   }
 }
-
